# ke2daira.rs

./: Cargo.toml  LICENSE  README.md
src/: kana2mora.rs  lib.rs
